# prompt-tower

./: .env  .gitignore  CLAUDE.md  DATABASE_MIGRATION_PLAN.md  DATABASE_MIGRATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  data_migration_scripts_guidance.md  database_schema.sql  pyproject.toml
.claude/: settings.local.json
backend/: config.py  database.py  db_models.py  main.py  models.py
backend/api/: __init__.py  auth.py  llm.py  prompts.py  tags.py  users.py
backend/data/: tags.json  users.json
backend/services/: __init__.py  db_service.py  file_service.py  llm_service.py  prompt_service.py  service_factory.py  tag_service.py  unified_tag_service.py  unified_user_service.py  user_service.py
backend/utils/: jwt_helpers.py  validators.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx  index.css  index.jsx
frontend/src/components/: LLMOptimizer.jsx  LoginForm.jsx  PromptEditor.jsx  PromptList.jsx  PromptSearch.jsx  ProtectedRoute.jsx  SignupForm.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: DashboardPage.css  DashboardPage.jsx  LoginPage.jsx  PromptListPage.css  PromptListPage.jsx  SignupPage.jsx  TagManagementPage.css  TagManagementPage.jsx  UserManagementPage.css  UserManagementPage.jsx
frontend/src/services/: api.js
mcp_server/: protocol.py  search_service.py  server.py
prompt-template/: Bento Grid.yaml  Card.yaml
scripts/: init_database.py  install.sh  migrate_to_database.py  start.sh  start_with_database.sh  test_migration.py  verify_setup.py
(+3 files in other folders)
